force-app/main/default/objects/Brand_Permission__c/fields/Village_Social_Media_Channels__c.field-meta.xml
<CustomField>
    <fullName>Village_Social_Media_Channels__c</fullName>
    <inlineHelpText>brand name/product imagery/price/outside and inside of boutique* featured on Facebook, Twitter and Instagram (organic posts)</inlineHelpText>
    <label>Village Social Media Channels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>