force-app/main/default/objects/Brand_Permission__c/fields/VM__c.field-meta.xml
<CustomField>
    <fullName>VM__c</fullName>
    <inlineHelpText>vinyls/props to be added to boutique window</inlineHelpText>
    <label>VM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes with Caveat</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>