force-app/main/default/objects/Brand_Permission__c/recordTypes/Ad_hoc.recordType-meta.xml
<RecordType>
    <fullName>Ad_hoc</fullName>
    <active>true</active>
    <description>Adhoc refers to specific permissions obtained for a marketing activity</description>
    <label>Ad-hoc</label>
</RecordType>