force-app/main/default/objects/Brand_Permission__c/recordTypes/Group_led_Annual.recordType-meta.xml
<RecordType>
    <fullName>Group_led_Annual</fullName>
    <active>true</active>
    <description>Group looks after Annual Brand Permissions</description>
    <label>Group-led Annual</label>
</RecordType>