force-app/main/default/objects/Brand_Permission__c/recordTypes/Lease_led_Annual.recordType-meta.xml
<RecordType>
    <fullName>Lease_led_Annual</fullName>
    <active>true</active>
    <description>Lease-led are specific contracts each Village has with a Brand</description>
    <label>Lease-led Annual</label>
</RecordType>