force-app/main/default/objects/Brand_Permission__c/validationRules/Cant_create_Permissions_in_earlier_years.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_create_Permissions_in_earlier_years</fullName>
    <active>true</active>
    <errorConditionFormula>OR( YEAR(Active_From_Date__c )&lt; YEAR(TODAY())
,

YEAR( Active_To_Date__c )&lt; YEAR(TODAY())
)</errorConditionFormula>
    <errorMessage>You cannot create Brand Permissions for previous years</errorMessage>
</ValidationRule>