force-app/main/default/objects/Brand_Permission__c/validationRules/From_date_AND_To_date_in_same_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>From_date_AND_To_date_in_same_Year</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR(Active_From_Date__c) &lt;&gt; YEAR(Active_To_Date__c)</errorConditionFormula>
    <errorMessage>The Active From date and Active To Date must be in the same year.</errorMessage>
</ValidationRule>