force-app/main/default/objects/Brand_Permission__c/validationRules/Reason_for_Cancellation_Removal_reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Cancellation_Removal_reqd</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISBLANK( Reason_for_Removal_or_Cancellation__c )      ,ISPICKVAL( Status__c  , &apos;Cancelled&apos;) || ISPICKVAL( Status__c  , &apos;Removed&apos;))</errorConditionFormula>
    <errorDisplayField>Reason_for_Removal_or_Cancellation__c</errorDisplayField>
    <errorMessage>Please enter a reason for Cancelling or Removing this Brand Permission record.</errorMessage>
</ValidationRule>