force-app/main/default/objects/Brand_Permission__c/validationRules/Reason_no_Permission_Granted.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_no_Permission_Granted</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &apos;No Permissions Granted&apos;) ,  ISBLANK( Reason_no_Permission_Granted__c )  )</errorConditionFormula>
    <errorDisplayField>Reason_no_Permission_Granted__c</errorDisplayField>
    <errorMessage>Please enter a reason why no Permission has been granted.</errorMessage>
</ValidationRule>